force-app/main/default/objects/DuplicateFinderSettings__c/DuplicateFinderSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>User settings for duplicate finder</description>
    <label>Duplicate Finder Settings</label>
</CustomObject>