force-app/main/default/objects/DuplicateFinderSettings__c/fields/MasterRecordStrategy__c.field-meta.xml
<CustomField>
    <fullName>MasterRecordStrategy__c</fullName>
    <description>Strategy to determine which record becomes the master record (OldestCreated, NewestCreated, MostComplete)</description>
    <label>Master Record Strategy</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Most Complete</fullName>
                <default>true</default>
                <label>Most Complete</label>
            </value>
            <value>
                <fullName>Newest Created</fullName>
            </value>
            <value>
                <fullName>Oldest Created</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>