force-app/main/default/objects/DuplicateFinderSettings__c/fields/MatchFields__c.field-meta.xml
<CustomField>
    <fullName>MatchFields__c</fullName>
    <description>Fields to match on</description>
    <label>Match Fields</label>
    <type>TextArea</type>
</CustomField>