force-app/main/default/objects/DuplicateFinderSettings__c/fields/ObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>ObjectAPIName__c</fullName>
    <description>API name of the object to check for duplicates</description>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>